    behavior.

* celerybeat: Now respects routers and task execution options again.

* celerybeat: Now reuses the publisher instead of the connection.

* Cache result backend: Using :class:`float` as the expires argument
  to ``cache.set`` is deprecated by the memcached libraries,
  so we now automatically cast to :class:`int`.

News
----

* Now depends on carrot version 0.10.7.

* Added :setting:`CELERY_REDIRECT_STDOUTS`, and
  :setting:`CELERYD_REDIRECT_STDOUTS_LEVEL` settings.

    :setting:`CELERY_REDIRECT_STDOUTS` is used by :program:`celeryd` and
    :program:`celerybeat`.  All output to ``stdout`` and ``stderr`` will be
    redirected to the current logger if enabled.

    :setting:`CELERY_REDIRECT_STDOUTS_LEVEL` decides the loglevel used and is
    :const:`WARNING` by default.

* Added :setting:`CELERYBEAT_SCHEDULER` setting.

    This setting is used to define the default for the -S option to
    :program:`celerybeat`.

    Example:

    .. code-block:: python

        CELERYBEAT_SCHEDULER = "djcelery.schedulers.DatabaseScheduler"

* Added Task.expires: Used to set default expiry time for tasks.

* New remote control commands: ``add_consumer`` and ``cancel_consumer``.

    .. method:: add_consumer(queue, exchange, exchange_type, routing_key,
                             **options)
        :module:

        Tells the worker to declare and consume from the specified
        declaration.

    .. method:: cancel_consumer(queue_name)
        :module:

        Tells the worker to stop consuming from queue (by queue name).


    Commands also added to :program:`celeryctl` and
    :class:`~celery.task.control.inspect`.


    Example using celeryctl to start consuming from queue "queue", in 
    exchange "exchange", of type "direct" using binding key "key"::

        $ celeryctl inspect add_consumer queue exchange direct key
        $ celeryctl inspect cancel_consumer queue

    See :ref:`monitoring-celeryctl` for more information about the